Inserito primo container di colonne

--- a/index.html
+++ b/index.html
@@ -11,6 +11,44 @@
     <title>12Bool</title>
   </head>
   <body>
+    <div class="container">
+      <div class="col-1">
+        <p>1 col</p>
+      </div>
+      <div class="col-1">
+        <p>1 col</p>
+      </div>
+      <div class="col-1">
+        <p>1 col</p>
+      </div>
+      <div class="col-1">
+        <p>1 col</p>
+      </div>
+      <div class="col-1">
+        <p>1 col</p>
+      </div>
+      <div class="col-1">
+        <p>1 col</p>
+      </div>
+      <div class="col-1">
+        <p>1 col</p>
+      </div>
+      <div class="col-1">
+        <p>1 col</p>
+      </div>
+      <div class="col-1">
+        <p>1 col</p>
+      </div>
+      <div class="col-1">
+        <p>1 col</p>
+      </div>
+      <div class="col-1">
+        <p>1 col</p>
+      </div>
+      <div class="col-1">
+        <p>1 col</p>
+      </div>
+    </div>
 
 
   </body>
