--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
       </div>
     </div>
 
+    <div class="container">
+      <div class="col-12">
+        <p>12 col</p>
+      </div>
+    </div>
+
 
   </body>
 </html>
