--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>12Bool</title>
   </head>
   <body>
+
     <div class="container">
       <div class="col-1">
         <p>1 col</p>
@@ -53,6 +54,36 @@
     <div class="container">
       <div class="col-12">
         <p>12 col</p>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="col-8">
+        <p>8 col</p>
+      </div>
+      <div class="col-2">
+        <p>2 col</p>
+      </div>
+      <div class="col-2">
+        <p> 2 col</p>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="col-1">
+        <p>col 1</p>
+      </div>
+      <div class="col-2">
+        <p>col 2</p>
+      </div>
+      <div class="col-2">
+        <p>col 2</p>
+      </div>
+      <div class="col-6">
+        <p>col 6</p>
+      </div>
+      <div class="col-1">
+        <p>col 1</p>
       </div>
     </div>
 
