--- a/index.html
+++ b/index.html
@@ -71,22 +71,44 @@
 
     <div class="container">
       <div class="col-1">
-        <p>col 1</p>
+        <p>1 col</p>
       </div>
       <div class="col-2">
-        <p>col 2</p>
+        <p>2 col</p>
       </div>
       <div class="col-2">
-        <p>col 2</p>
+        <p>2 col</p>
       </div>
       <div class="col-6">
-        <p>col 6</p>
+        <p>6 col</p>
       </div>
       <div class="col-1">
-        <p>col 1</p>
+        <p>1 col</p>
       </div>
     </div>
 
-
+    <div class="container">
+      <div class="col-6">
+        <div class="container">
+          <div class="col-2 nested">
+            <p>Nested 2 col</p>
+          </div>
+          <div class="col-2 nested">
+            <p>Nested 2 col</p>
+          </div>
+          <div class="col-8 nested">
+            <p>Nested 8 col</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-6">
+        <div class="col-6 nested">
+          <p>Nested 6 col</p>
+        </div>
+        <div class="col-6 nested">
+          <p>Nested 6 col</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
