modifica grandezza colonne annidate

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>12Bool</title>
   </head>
   <body>
-
+    <!-- 12 col da 1  -->
     <div class="container">
       <div class="col-1">
         <p>1 col</p>
@@ -50,13 +50,15 @@
         <p>1 col</p>
       </div>
     </div>
-
+    <!-- /12 col da 1  -->
+    <!-- unica colonna -->
     <div class="container">
       <div class="col-12">
         <p>12 col</p>
       </div>
     </div>
-
+    <!-- /unica colonna -->
+    <!-- 1 col da 8 e 2 col da 2 -->
     <div class="container">
       <div class="col-8">
         <p>8 col</p>
@@ -68,7 +70,8 @@
         <p> 2 col</p>
       </div>
     </div>
-
+    <!-- 1 col da 8 e 2 col da 2 -->
+    <!-- mix colonne larghezze diverse  -->
     <div class="container">
       <div class="col-1">
         <p>1 col</p>
@@ -86,7 +89,8 @@
         <p>1 col</p>
       </div>
     </div>
-
+    <!-- /mix colonne larghezze diverse  -->
+    <!-- colonne annidate -->
     <div class="container">
       <div class="col-6">
         <div class="container">
@@ -110,5 +114,6 @@
         </div>
       </div>
     </div>
+    <!-- /colonne annidate -->
   </body>
 </html>
