modifica container colonne annidate e loro grandezza

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <!-- colonne annidate -->
     <div class="container">
       <div class="col-6">
-        <div class="container">
+        <div class="container nested-col">
           <div class="col-2 nested">
             <p>Nested 2 col</p>
           </div>
@@ -106,11 +106,13 @@
         </div>
       </div>
       <div class="col-6">
-        <div class="col-6 nested">
-          <p>Nested 6 col</p>
-        </div>
-        <div class="col-6 nested">
-          <p>Nested 6 col</p>
+        <div class="container nested-col">
+          <div class="col-6 nested">
+            <p>Nested 6 col</p>
+          </div>
+          <div class="col-6 nested">
+            <p>Nested 6 col</p>
+          </div>
         </div>
       </div>
     </div>
