Modifiche in css per responsive colonne

--- a/index.html
+++ b/index.html
@@ -13,104 +13,104 @@
   <body>
     <!-- 12 col da 1  -->
     <div class="container">
-      <div class="col-1">
+      <div class="col-xs-1 col-md-1 col-lg-1">
         <p>1 col</p>
       </div>
-      <div class="col-1">
+      <div class="col-xs-1 col-md-1 col-lg-1">
         <p>1 col</p>
       </div>
-      <div class="col-1">
+      <div class="col-xs-1 col-md-1 col-lg-1">
         <p>1 col</p>
       </div>
-      <div class="col-1">
+      <div class="col-xs-1 col-md-1 col-lg-1">
         <p>1 col</p>
       </div>
-      <div class="col-1">
+      <div class="col-xs-1 col-md-1 col-lg-1">
         <p>1 col</p>
       </div>
-      <div class="col-1">
+      <div class="col-xs-1 col-md-1 col-lg-1">
         <p>1 col</p>
       </div>
-      <div class="col-1">
+      <div class="col-xs-1 col-md-1 col-lg-1">
         <p>1 col</p>
       </div>
-      <div class="col-1">
+      <div class="col-xs-1 col-md-1 col-lg-1">
         <p>1 col</p>
       </div>
-      <div class="col-1">
+      <div class="col-xs-1 col-md-1 col-lg-1">
         <p>1 col</p>
       </div>
-      <div class="col-1">
+      <div class="col-xs-1 col-md-1 col-lg-1">
         <p>1 col</p>
       </div>
-      <div class="col-1">
+      <div class="col-xs-1 col-md-1 col-lg-1">
         <p>1 col</p>
       </div>
-      <div class="col-1">
+      <div class="col-xs-1 col-md-1 col-lg-1">
         <p>1 col</p>
       </div>
     </div>
     <!-- /12 col da 1  -->
     <!-- unica colonna -->
     <div class="container">
-      <div class="col-12">
+      <div class="col-xs-12 col-md-12 col-lg-12">
         <p>12 col</p>
       </div>
     </div>
     <!-- /unica colonna -->
     <!-- 1 col da 8 e 2 col da 2 -->
     <div class="container">
-      <div class="col-8">
+      <div class="col-xs-8 col-md-8 col-lg-8">
         <p>8 col</p>
       </div>
-      <div class="col-2">
+      <div class="col-xs-2 col-md-2 col-lg-2">
         <p>2 col</p>
       </div>
-      <div class="col-2">
+      <div class="col-xs-2 col-md-2 col-lg-2">
         <p> 2 col</p>
       </div>
     </div>
     <!-- 1 col da 8 e 2 col da 2 -->
     <!-- mix colonne larghezze diverse  -->
     <div class="container">
-      <div class="col-1">
+      <div class="col-xs-1 col-md-1 col-lg-1">
         <p>1 col</p>
       </div>
-      <div class="col-2">
+      <div class="col-xs-2 col-md-2 col-lg-2">
         <p>2 col</p>
       </div>
-      <div class="col-2">
+      <div class="col-xs-2 col-md-2 col-lg-2">
         <p>2 col</p>
       </div>
-      <div class="col-6">
+      <div class="col-xs-6 col-md-6 col-lg-6">
         <p>6 col</p>
       </div>
-      <div class="col-1">
+      <div class="col-xs-1 col-md-1 col-lg-1">
         <p>1 col</p>
       </div>
     </div>
     <!-- /mix colonne larghezze diverse  -->
     <!-- colonne annidate -->
     <div class="container">
-      <div class="col-6">
+      <div class="col-xs-6 col-md-6 col-lg-6">
         <div class="container nested-col">
-          <div class="col-2 nested">
+          <div class="col-xs-2 col-md-2 col-lg-2 nested">
             <p>Nested 2 col</p>
           </div>
-          <div class="col-2 nested">
+          <div class="col-xs-2 col-md-2 col-lg-2 nested">
             <p>Nested 2 col</p>
           </div>
-          <div class="col-8 nested">
+          <div class="col-xs-8 col-md-8 col-lg-8 nested">
             <p>Nested 8 col</p>
           </div>
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-xs-6 col-md-6 col-lg-6">
         <div class="container nested-col">
-          <div class="col-6 nested">
+          <div class="col-xs-6 col-md-6 col-lg-6 nested">
             <p>Nested 6 col</p>
           </div>
-          <div class="col-6 nested">
+          <div class="col-xs-6 col-md-6 col-lg-6 nested">
             <p>Nested 6 col</p>
           </div>
         </div>
